<resources>
    <string name="app_name">Sleep Aid</string>

    <string name="welcome_text">Welcome to Sleep Aid, your personal sleep hygiene coach!\nWe’ll start by asking you a few questions that will help us personalise your experience and understand your needs.</string>

    <string name="user_id_question">Please fill in your unique identifier given to you by the researcher.\nThis will be stored against your questionnaire answers.</string>
    <string name="exit_user_id">Are you sure you want to exit?\nYour answer will not be saved.</string>

    <string name="exit_questionnaire">Are you sure you want to exit the questionnaire?\nYour answers will not be saved.</string>

    <string name="radio_group_validation">Please select an option.</string>
    <string name="hour_validation">Please enter a valid hour (between \"00\" and \"23\").</string>
    <string name="minute_validation">Please enter a valid minute (between \"00\" and \"59\").</string>
    <string name="time_validation">Please enter a valid time (between \"00:00\" and \"23:59\").</string>

    <string name="goal_setting_validation">Invalid value.\nThis setting has to match the format \"hh:mm - hh:mm\".</string>
    <string name="nap_setting_validation">Invalid value.\nThis setting has to be either \"Yes.\" or \"No.\".</string>
    <string name="save_setting">Changing this setting may remove any alarms you currently have or/and create new ones.\n\nDo you still wish to continue?</string>

    <string name="exit_alarm_configuration">Save your changes or discard them?</string>
    <string name="exit_alarm_sound">Save your choice or discard it?</string>

    <string name="wakeup_time">Based on this information and your previous choice, your recommended wake up time is&#160;</string>

    <string name="blue_light_filter_permission">In order to use the blue light filter functionality you need to allow this app to run over other apps.\nYou can change this in your phone\'s settings at any time.\n\nWould you like to grant this permission?</string>
    <string name="alarm_permission">It seems Sleep Aid doesn\'t have permission to schedule alarms. Until you grant this permission, any alarms you have won\'t go off.\n\nWould you like to grant this permission now?</string>

    <string name="yes_modal">Yes</string>
    <string name="ok_modal">Ok</string>
    <string name="no_modal">No</string>
    <string name="cancel_modal">Cancel</string>
    <string name="save_modal">Save</string>
    <string name="discard_modal">Discard</string>

    <string name="start_button">Let\'s start&#160;&#160;&#160;></string>
    <string name="next_button">Next&#160;&#160;&#160;></string>
    <string name="back_button">&#60;&#160;&#160;&#160;Back</string>
    <string name="finish_button">Finish&#160;&#160;&#160;></string>

    <string name="review">Your answers</string>

    <string name="dinner_notification">Eating late means your muscles have to work on digesting instead of resting.\nThis can prevent you from falling asleep and getting the deep sleep you need.\n\nTry and leave a couple of hours between your last meal of the day and your bedtime.</string>
    <string name="exercise_notification">The benefits of exercising can include a reduced risk of disease and a higher quality of life.\nExercising during the day can also help alleviate daytime sleepiness and reduce the amount of time you lie awake at night.\n\nMake some time to move around to stay healthy and sleep better!</string>
    <string name="caffeine_notification">The effects of caffeine can last between 4 to 6 hours. This can impact your bed hour.\nAlthough caffeine is most often consumed in coffee, it can also be found in tea, sodas, and medications.\n\nBe mindful of how much caffeine you consume in the afternoon and evening, and remember, just because it\'s not coffee doesn\'t mean it\'s not caffeine!</string>

    <drawable name="purple_sleep_2">#291749</drawable>
    <drawable name="purple_sleep_3">#1A0F2F</drawable>

    <string-array name="calendarOptions">
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>

    <string name="already_submitted_diary_message">You\'ve already submitted this diary today.</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>