<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.example.sleepaid.Component.TextBox
            android:id="@+id/userIdQuestion"
            android:layout_width="0dp"
            app:layout_constraintWidth_max="wrap"
            app:layout_constraintWidth_percent="0.9"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:textSize="20"
            app:text="@string/user_id_question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.sleepaid.Component.EditTextAnswerComponent
            android:id="@+id/userIdAnswer"
            android:layout_width="0dp"
            app:layout_constraintWidth_max="wrap"
            app:layout_constraintWidth_percent="0.9"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:inputType="textShortMessage"
            app:hint="e.g. 1BU25"
            app:maxLength="5"
            app:editTextTextSize="20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userIdQuestion"/>

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:padding="10dp"
            android:text="@string/back_button"
            android:textAlignment="center"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@+id/userIdQuestion"
            app:layout_constraintTop_toBottomOf="@+id/userIdAnswer"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:padding="10dp"
            android:text="@string/next_button"
            android:textAlignment="center"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="@+id/userIdQuestion"
            app:layout_constraintTop_toBottomOf="@+id/userIdAnswer"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>